# ai-brain-usa

./: .gitignore  AGENTS 2.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DISCLAIMER.md  GETTING_STARTED.md  GETTING_STARTED_ARABIC.md  GETTING_STARTED_CHINESE.md  GETTING_STARTED_FRENCH.md  GETTING_STARTED_SPANISH.md  GETTING_STARTED_TAGALOG.md  GETTING_STARTED_VIETNAMESE.md  KNOWLEDGE_PROVENANCE.md  LICENSE  MAC_INSTALL.md  MODEL_SETUP.md  NO_PII_NO_DATA.md  README.md  ROUTING_CONTRACT 2.md  SCOPE.md  SECURITY.md  TRANSLATION_HELP_WANTED.md  config.toml.template  pyproject.toml  setup.sh
_drafting_data/: 01-compliance-privacy-policy-ccpa-cpra.md  02-compliance-data-breach-notification-multi-state.md  03-compliance-sec-cybersecurity-incident-1-05.md  04-compliance-hipaa-baa.md  05-compliance-ai-governance-nist-framework.md  06-compliance-state-ai-acts-multi-jurisdiction.md  10-contract-master-services-agreement.md  100-insolvency-chapter-7-petition.md  101-insolvency-chapter-11-petition.md  102-insolvency-chapter-13-petition.md  103-insolvency-proof-of-claim.md  104-insolvency-relief-from-stay-motion.md  11-contract-saas-subscription.md  110-tribunal-tax-court-petition.md  111-tribunal-immigration-court-eoir-26.md  112-tribunal-administrative-law-judge-petition.md  113-tribunal-social-security-administrative-appeal.md  114-judicial-review-apa-complaint.md  12-contract-employment-offer-letter.md  120-commercial-purchase-order-terms.md  121-commercial-supply-agreement.md  122-commercial-distribution-agreement.md  123-commercial-franchise-agreement.md  124-commercial-loan-credit-agreement.md  125-commercial-security-agreement-ucc-9.md  13-contract-independent-contractor.md  130-corporate-certificate-of-incorporation-delaware.md  131-corporate-bylaws-delaware.md  132-corporate-board-resolutions.md  133-corporate-merger-agreement.md  134-corporate-stock-purchase-series-seed.md  135-corporate-form-d-rule-506.md  14-contract-mutual-nda.md  140-regulatory-sec-form-10-k-shell.md  (+58 more)
ailawfirm_usa/: cli.py  (+24 more)
(+130 files in other folders)
