[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "ailawfirm_usa"
version = "0.1.0"
description = "AI Brain — USA Solo edition. Federal-focused practice OS for US solo practitioners. Built on local memory architecture."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Rushikesh R. Mahajan", email = "advrushikeshravindramahajan@gmail.com" },
]
keywords = [
    "ai", "memory", "llm", "rag", "chromadb", "mcp",
    "vector-database", "claude", "chatgpt", "embeddings",
    "legal-tech", "law-firm", "usa", "solo-practitioner",
    "federal-courts", "bluebook", "aba", "wolfgang-rush",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Legal Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Utilities",
]
dependencies = [
    "chromadb>=0.4.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/Wolfgangrush/ai-law-firm-usa"
Repository = "https://github.com/Wolfgangrush/ai-law-firm-usa"
"Bug Tracker" = "https://github.com/Wolfgangrush/ai-law-firm-usa/issues"

[tool.setuptools.packages.find]
include = ["ailawfirm_usa*"]

[tool.setuptools.package-data]
ailawfirm_usa = ["templates/*.md", "templates/*.toml"]

[project.scripts]
ailawfirm_usa = "ailawfirm_usa:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "build>=1.0", "twine>=4.0"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
